_site/scripts/log/log_bib
  File "/home/vopuu/project/LBiophyEvo.github.io/scripts/get_bib.py", line 71
    'entrytype': pub['bib'].get('ENTRYTYPE', 'article')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
